--- a/h4x0r-server.csproj
+++ b/h4x0r-server.csproj
@@ -122,11 +122,11 @@
     <Error Condition="!Exists('packages\System.Data.SQLite.Core.1.0.105.2\build\net46\System.Data.SQLite.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\System.Data.SQLite.Core.1.0.105.2\build\net46\System.Data.SQLite.Core.targets'))" />
   </Target>
   <PropertyGroup>
-    <PostBuildEvent>echo Copying Messages.cs to %25H4X0R_CLIENT%25...
-copy $(SolutionDir)\Messages.cs %25H4X0R_CLIENT%25
+    <PostBuildEvent>echo Copying Messages.cs to %25H4X0R_CLIENT%25\assets...
+copy $(SolutionDir)\Messages.cs %25H4X0R_CLIENT%25\assets
 
-echo Copying MessagesInternal.cs to %25H4X0R_CLIENT%25...
-copy $(SolutionDir)\MessagesInternal.cs %25H4X0R_CLIENT%25</PostBuildEvent>
+echo Copying MessagesInternal.cs to %25H4X0R_CLIENT%25\assets...
+copy $(SolutionDir)\MessagesInternal.cs %25H4X0R_CLIENT%25\assets</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>echo flatc: Generating MessagesInternal.cs...
