--- a/h4x0r-server.csproj
+++ b/h4x0r-server.csproj
@@ -69,8 +69,10 @@
   <ItemGroup>
     <Compile Include="Account.cs" />
     <Compile Include="AsyncSocketListener.cs" />
+    <Compile Include="BlackSphereSoftware.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="File.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,6 +87,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
+    <Compile Include="Software.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
