--- a/h4x0r-server.csproj
+++ b/h4x0r-server.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Client.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="File.cs" />
+    <Compile Include="FileFactory.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,7 +88,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
-    <Compile Include="Software.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
