--- a/h4x0r-server/h4x0r-server.csproj
+++ b/h4x0r-server/h4x0r-server.csproj
@@ -74,22 +74,20 @@
     <Compile Include="Database.cs" />
     <Compile Include="File.cs" />
     <Compile Include="FileFactory.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="ServerForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ServerForm.Designer.cs">
+      <DependentUpon>ServerForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Logger.cs" />
-    <Compile Include="Messages.cs" />
-    <Compile Include="MessagesInternal.cs" />
     <Compile Include="Node\Address.cs" />
     <Compile Include="Node\Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="ServerForm.resx">
+      <DependentUpon>ServerForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -101,7 +99,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="MessagesInternal.fbs" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -116,6 +113,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\h4x0r-common\h4x0r-common.csproj">
+      <Project>{572795fb-fa77-4b93-9c81-de9872d4c5f9}</Project>
+      <Name>h4x0r-common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\System.Data.SQLite.Core.1.0.105.2\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('packages\System.Data.SQLite.Core.1.0.105.2\build\net46\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
@@ -126,13 +129,13 @@
   </Target>
   <PropertyGroup>
     <PostBuildEvent>echo Copying Messages.cs to %25H4X0R_CLIENT%25\assets...
-copy $(SolutionDir)\Messages.cs %25H4X0R_CLIENT%25\assets
+copy $(SolutionDir)\h4x0r-server\Messages.cs %25H4X0R_CLIENT%25\assets
 
 echo Copying MessagesInternal.cs to %25H4X0R_CLIENT%25\assets...
-copy $(SolutionDir)\MessagesInternal.cs %25H4X0R_CLIENT%25\assets</PostBuildEvent>
+copy $(SolutionDir)\h4x0r-server\MessagesInternal.cs %25H4X0R_CLIENT%25\assets</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>echo flatc: Generating MessagesInternal.cs...
-$(SolutionDir)\flatc  -o $(SolutionDir) --csharp $(SolutionDir)\MessagesInternal.fbs --gen-onefile</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
 </Project>
