WIP software purchasing

--- a/h4x0r-common/h4x0r-common.csproj
+++ b/h4x0r-common/h4x0r-common.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlackSphereSales.cs" />
+    <Compile Include="File.cs" />
+    <Compile Include="FileFactory.cs" />
     <Compile Include="Messages.cs" />
     <Compile Include="MessagesInternal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
