Started work on the NetworkGenerator.

--- a/h4x0r-server/h4x0r-server.csproj
+++ b/h4x0r-server/h4x0r-server.csproj
@@ -76,6 +76,7 @@
     <Compile Include="AsyncSocketListener.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="Run\NetworkGenerator.cs" />
     <Compile Include="ServerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,6 +122,7 @@
       <Name>h4x0r-common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\System.Data.SQLite.Core.1.0.106.0\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('packages\System.Data.SQLite.Core.1.0.106.0\build\net46\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
